# Cellular-Automata

./: .gitignore  CMakeLists.txt  Config.h.in  README.md
include/: App.h  CellularAutomata.h  Grid.h  LeftPanel.h  RootWindow.h
src/: CMakeLists.txt  CellularAutomata.cpp  Grid.cpp  LeftPanel.cpp  RootWindow.cpp
